# VisaBulletinCharts

./: .env  .env.example  .gitignore  Makefile  README.md  last_bulletin.json  main.py  pyproject.toml
.github/workflows/: monitor.yml
scripts/: setup.sh
tests/: conftest.py  test_analysis.py  test_scraper.py
visa_bulletin/: analysis.py  config.py  monitor.py  plot.py  scraper.py
visa_bulletin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
